[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planning-agent-starter"
version = "0.1.0"
description = "Starter agent with explicit planning (plan->execute->reflect)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Xuanxd"}]
dependencies = []

[project.scripts]
planning-agent = "agent.cli:main"
